# cppcourse-brunel

./: CMakeLists.txt  experiment.cpp  experiment.h  main.cpp  neuron.cpp  neuron.h  unitest.cpp
html/: annotated.html  classExperiment-members.html  classExperiment.html  classNeuron-members.html  classNeuron.html  classes.html  experiment_8h_source.html  files.html  functions.html  functions_func.html  index.html  md_README.html  neuron_8h_source.html  pages.html
html/search/: all_0.js  all_2.js  all_3.js  all_5.js  all_6.js  functions_0.js  functions_4.js  functions_7.js  search.js
latex/: annotated.tex  classExperiment.tex  classNeuron.tex  refman.tex
